--- a/src/app/components/user/team-list/team-list.component.html
+++ b/src/app/components/user/team-list/team-list.component.html
@@ -1,4 +1,4 @@
-<div class="bg-gray-100 min-h-screen flex flex-col items-center p-6 w-full">
+<div class="bg-gray-100 min-h-screen flex flex-col items-center p-2 w-full overflow-x-hidden">
 
     <!-- Info Card -->
     <div class="info-card w-full max-w-md mb-6 flex items-center gap-3 p-3 rounded-lg bg-white border border-gray-100">
