--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,11 +1,11 @@
-<div class="w-full h-full bg-gray-100 flex flex-col overflow-auto item">
+<div class="w-full h-full bg-gray-100 flex flex-col overflow-hidden">
     <app-user-profile-header
       [userName]="user?.userName"
       [email]="user?.email"
       [avatarUrl]="'assets/man-user.svg'">
     </app-user-profile-header>
 
-    <div *ngIf="showSettings" class=" flex-1 flex flex-col items-center p-6 gap-2 w-full">
+    <div *ngIf="showSettings" class="flex-1 flex flex-col items-center p-6 gap-2 w-full">
         <h3 class="text-lg font-semibold text-gray-700 w-full max-w-md text-left">{{title}}</h3>
 
         <app-settings-item 
@@ -17,14 +17,14 @@
         [badgeCount]="item.label === 'Notifications' ? pendingInviteCount : undefined">
        </app-settings-item>
 
-       <div class="w-full  max-w-md bg-white flex items-center gap-4 px-4 py-3 rounded-xl shadow-sm cursor-pointer hover:bg-red-50 transition" (click)="logOut()">
+       <div class="w-full max-w-md bg-white flex items-center gap-4 px-4 py-3 rounded-xl shadow-sm cursor-pointer hover:bg-red-50 transition" (click)="logOut()">
          <fa-icon [icon]="logoutIcon" class="text-red-500 text-xl"></fa-icon>
          <span class="text-red-500 font-medium">Log out</span>
         </div>
     </div>
 
-    <div class="flex-1 bg-gray-100 p-6 flex flex-col items-center mb-16">
-        <div class="self-center w-[400px] md:w-[500px]">
+    <div class="flex-1 bg-gray-100 p-2 flex flex-col items-center mb-16 overflow-x-hidden">
+        <div class="self-center w-full max-w-md">
             <router-outlet></router-outlet>
         </div>
     </div>
