--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,24 +1,29 @@
 <div class="text-white bg-primary h-full w-full flex justify-center">
-  <div class="flex items-center justify-between w-[95%] lg:w-[30%]"> 
-    <div class="flex flex-col items-center">
+  <div class="flex items-center w-[95%] lg:w-[30%]">
+    <div class="flex-1 flex flex-col items-center cursor-pointer">
       <img src="assets/battle.svg" class="text-white text-xl w-6 h-6 object-contain mb-[2px] mt-[2px]" alt="Battle icon" />
       <span class="text-xs text-white mt-[2px]">Battle</span>
     </div>
-    <div class="flex flex-col items-center" routerLink="/map">
-      <fa-icon [icon]="locationIcon" class="text-white text-xl cursor-pointer"></fa-icon>
+    <div class="flex-1 flex flex-col items-center cursor-pointer" routerLink="/map">
+      <fa-icon [icon]="locationIcon" class="text-white text-xl"></fa-icon>
       <span class="text-xs text-white">Map</span>
     </div>
-    <fa-icon [icon]="addCatchIcon" (click)="openFishRegisterDialog()" class="text-white text-4xl lg:text-3xl cursor-pointer"></fa-icon>
-    <div class="flex flex-col items-center cursor-pointer" routerLink="/leaderboard">
-      <fa-icon [icon]="starIcon" class="text-white text-xl"></fa-icon>
-      <span class="text-xs text-white">Leaderboard</span>
+    <div class="flex-1 flex flex-col items-center relative -mt-6 z-10" (click)="openFishRegisterDialog()">
+      <div class="rounded-full border border-primary p-[6px] bg-primary">
+        <fa-icon [icon]="addCatchIcon" class="text-white text-4xl"></fa-icon>
+      </div>
+      <span class="text-xs text-white mt-[1px] leading-none">Add catch</span>
     </div>
-    <div class="flex flex-col items-center cursor-pointer" routerLink="/user">
-      <fa-icon [icon]="userIcon"  class="text-white text-xl"></fa-icon>
+    
+    
+    
+    <div class="flex-1 flex flex-col items-center cursor-pointer" routerLink="/leaderboard">
+      <fa-icon [icon]="starIcon" class="text-white text-xl"></fa-icon>
+      <span class="text-xs text-white">Stats</span>
+    </div>
+    <div class="flex-1 flex flex-col items-center cursor-pointer" routerLink="/user">
+      <fa-icon [icon]="userIcon" class="text-white text-xl"></fa-icon>
       <span class="text-xs text-white">User</span>
     </div>
-    <!-- <div (click)="logOut()">
-      Log out
-    </div> -->
   </div>
 </div>
