--- a/src/app/components/user/team-list/team/team.component.html
+++ b/src/app/components/user/team-list/team/team.component.html
@@ -1,4 +1,4 @@
-<div class="w-full max-w-2xl mx-auto p-4">
+<div class="p-4">
   <div class="flex items-center mb-6 relative">
     <!-- Back button (positioned left) -->
     <a [routerLink]="['/user/teams']" class="text-gray-700 hover:text-gray-900 cursor-pointer absolute left-0">
