Revert to 'refactor: extract skeleton loading animation to reusable SkeletonLoaderComponent'

--- a/src/app/components/login-register-page/login-register-page.component.html
+++ b/src/app/components/login-register-page/login-register-page.component.html
@@ -1,16 +1,15 @@
-<div class="login-container flex justify-center items-start bg-white">
+<div class="login-container h-full flex justify-center items-center bg-white">
     <!-- <div class="login-form w-[50%] h-[50%] bg-slate-200"></div> -->
-    <mat-card class="mobile-full-height w-[100%] h-auto lg:w-[25%] lg:h-auto xl:w-[30%] xl:h-auto 2xl:w-[25%] 2xl:h-auto bg-white flex flex-col items-center justify-start overflow-visible min-h-[500px] py-4">
-      <div class="login-content flex flex-col items-center justify-start w-full">
+    <mat-card class="mobile-full-height w-[100%] h-auto lg:w-[25%] lg:h-auto xl:w-[30%] xl:h-auto 2xl:w-[25%] 2xl:h-auto bg-white flex flex-col items-center justify-center overflow-visible min-h-[500px] py-4">
+      <div class="login-content flex flex-col items-center justify-center w-full">
         <div class="logo-container flex justify-center mt-2 mb-2">
           <img src="assets/hookspot-logo.png" alt="Hookspot Logo" class="w-[60%]">
         </div>
         <mat-tab-group dynamicHeight class="w-[80%]">
-          <mat-tab class="text-lg" label="Logga in">
-            <mat-card-content class="mt-[6%] mb-8">
-              <app-login class="w-[100%]"></app-login>
-            </mat-card-content>
-          </mat-tab>
+          <mat-tab class="text-lg" label="Logga in"
+            ><mat-card-content class="mt-[6%] mb-8">
+              <app-login class="w-[100%]"></app-login> </mat-card-content
+          ></mat-tab>
           <mat-tab label="Registrera">
             <mat-card-content class="mt-[6%] mb-8">
               <app-register class="w-[100%]"></app-register>
