--- a/src/app/components/user/team-list/team/team.component.html
+++ b/src/app/components/user/team-list/team/team.component.html
@@ -1,4 +1,4 @@
-<div class="p-4">
+<div class="w-full max-w-2xl mx-auto p-4">
   <div class="flex items-center mb-6 relative">
     <!-- Back button (positioned left) -->
     <a [routerLink]="['/user/teams']" class="text-gray-700 hover:text-gray-900 cursor-pointer absolute left-0">
@@ -32,35 +32,34 @@
     </button>
   </div>
   
-  <div class="bg-white rounded-xl shadow-lg overflow-hidden border border-gray-100 mb-20 md:mb-0">
-    <div class="max-h-[320px] overflow-auto mobile-scroll">
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-full">
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef class="text-left p-4"> Name </th>
-          <td mat-cell *matCellDef="let member" class="p-4"> {{member.userName}} </td>
-        </ng-container>
-    
-        <!-- Role Column -->
-        <ng-container matColumnDef="role">
-          <th mat-header-cell *matHeaderCellDef class="text-left p-4"> Role </th>
-          <td mat-cell *matCellDef="let member" class="p-4">
-            <span [ngClass]="{'text-primary font-bold': member.role === 'Admin', 'text-gray-600': member.role === 'Member'}">
-              {{member.role}}
-            </span>
-          </td>
-        </ng-container>
-    
-        <!-- Join Date Column -->
-        <ng-container matColumnDef="joinDate">
-          <th mat-header-cell *matHeaderCellDef class="text-left p-4"> Joined </th>
-          <td mat-cell *matCellDef="let member" class="p-4 text-gray-500"> {{member.joinedAt}} </td>
-        </ng-container>
-    
-        <tr mat-header-row *matHeaderRowDef="displayedColumns" class="bg-gray-100"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="hover:bg-gray-50 transition"></tr>
-      </table>
-    </div>
+  <div class="max-h-[320px] overflow-auto shadow-lg mobile-scroll table-wrapper">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-full">
+      
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef class="text-left p-4"> Name </th>
+        <td mat-cell *matCellDef="let member" class="p-4"> {{member.userName}} </td>
+      </ng-container>
+  
+      <!-- Role Column -->
+      <ng-container matColumnDef="role">
+        <th mat-header-cell *matHeaderCellDef class="text-left p-4"> Role </th>
+        <td mat-cell *matCellDef="let member" class="p-4">
+          <span [ngClass]="{'text-primary font-bold': member.role === 'Admin', 'text-gray-600': member.role === 'Member'}">
+            {{member.role}}
+          </span>
+        </td>
+      </ng-container>
+  
+      <!-- Join Date Column -->
+      <ng-container matColumnDef="joinDate">
+        <th mat-header-cell *matHeaderCellDef class="text-left p-4"> Joined </th>
+        <td mat-cell *matCellDef="let member" class="p-4 text-gray-500"> {{member.joinedAt}} </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns" class="bg-gray-100"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="hover:bg-gray-50 transition"></tr>
+    </table>
   </div>
 
   <app-image-gallery 
