--- a/src/app/components/user/team-list/team/team.component.html
+++ b/src/app/components/user/team-list/team/team.component.html
@@ -62,9 +62,11 @@
     </table>
   </div>
 
-  <app-image-gallery 
-    [title]="'Latest Team Catches'"
-    [catches]="teamCatches">
-  </app-image-gallery>
+  <div class="gallery-wrapper">
+    <app-image-gallery 
+      [title]="'Latest Team Catches'"
+      [catches]="teamCatches">
+    </app-image-gallery>
+  </div>
 </div>
   
