--- a/src/app/components/user/team-list/team/team.component.scss
+++ b/src/app/components/user/team-list/team/team.component.scss
@@ -193,4 +193,11 @@ tr:hover {
   }
 }
 
+.gallery-wrapper {
+  @media (max-width: 768px) {
+    min-height: 80vh;
+    margin-bottom: 2.5rem;
+  }
+}
+
   
