fix: add mobile bottom margin to my-catches gallery
Wrapped image-gallery with gallery-wrapper div to match team component mobile spacing

--- a/src/app/components/user/my-catches/my-catches.component.html
+++ b/src/app/components/user/my-catches/my-catches.component.html
@@ -4,9 +4,11 @@
   </a>
 </div>
 
-<app-image-gallery 
-  [title]="'My Catches'"
-  [catches]="myCatches"
-  [showDelete]="true"
-  (deleteCatch)="onDeleteCatch($event)">
-</app-image-gallery> 
+<div class="gallery-wrapper">
+  <app-image-gallery 
+    [title]="'My Catches'"
+    [catches]="myCatches"
+    [showDelete]="true"
+    (deleteCatch)="onDeleteCatch($event)">
+  </app-image-gallery>
+</div> 
