--- a/src/app/components/common/user-profile-header/user-profile-header.component.html
+++ b/src/app/components/common/user-profile-header/user-profile-header.component.html
@@ -1,6 +1,8 @@
 <div class="bg-primary flex flex-col justify-center items-center py-10">
-    <img [src]="avatarUrl" [alt]="userName" 
-        class="h-32 mt-2 rounded-full border-2 border-white shadow-lg">
+    <div class="bg-gray-200 rounded-full">
+        <img [src]="avatarUrl" [alt]="userName" 
+            class="h-32 mt-2 rounded-full shadow-lg">
+    </div>
     
     <div class="text-white text-center mt-4">
         <h2 *ngIf="userName" class="text-2xl font-semibold">{{userName}}</h2>
