Update user profile image design

--- a/src/app/components/common/user-profile-header/user-profile-header.component.html
+++ b/src/app/components/common/user-profile-header/user-profile-header.component.html
@@ -1,5 +1,5 @@
 <div class="bg-primary flex flex-col justify-center items-center py-10">
-    <div class="bg-gray-200 rounded-full">
+    <div class="profile-img-wrapper">
         <img [src]="avatarUrl" [alt]="userName" 
             class="h-32 mt-2 rounded-full shadow-lg">
     </div>
