--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -4,7 +4,8 @@
       *ngIf="showSettings"
       [userName]="user?.userName"
       [email]="user?.email"
-      [avatarUrl]="'assets/default-user.svg'">
+      [avatarUrl]="user?.avatarUrl || 'assets/default-user.svg'"
+      [userId]="user?.userId">
     </app-user-profile-header>
 
     <div *ngIf="showSettings" class="flex flex-col items-center p-6 gap-2 w-full">
@@ -31,7 +32,8 @@
             <app-user-profile-header
               [userName]="user?.userName"
               [email]="user?.email"
-              [avatarUrl]="'assets/default-user.svg'"
+              [avatarUrl]="user?.avatarUrl || 'assets/default-user.svg'"
+              [userId]="user?.userId"
               class="w-full mb-6"
             ></app-user-profile-header>
         </ng-container>
