--- a/src/app/components/common/range-slider/range-slider.component.scss
+++ b/src/app/components/common/range-slider/range-slider.component.scss
@@ -1,8 +1,8 @@
 .filter-label-header {
   font-size: 0.875rem; /* 14px */
-  color: var(--sys-primary);
+  color: #6b7280;
   font-weight: 500;
-  margin-bottom: 1.5rem;
+  margin-bottom: 2rem;
   text-align: center;
 }
 
@@ -80,5 +80,29 @@ mat-slider {
     .mdc-slider__value-indicator {
       display: none;
     }
+  }
+}
+
+@media (max-width: 767px) {
+  .filter-label-header {
+    margin-bottom: 1.2rem;
+    font-size: 0.82rem;
+  }
+  .filter-section {
+    margin-bottom: 0.2rem;
+  }
+  .slider-labels {
+    width: 100%;
+    height: 16px;
+  }
+  .slider-label {
+    font-size: 0.82rem;
+    padding: 1px 7px 3px 7px;
+    border-radius: 7px;
+    min-width: 24px;
+  }
+  mat-slider {
+    width: 100%;
+    margin: 0.2rem auto 0.7rem auto;
   }
 } 
