feat: add support for Harr fish species

--- a/src/app/components/common/image-gallery/image-gallery.component.html
+++ b/src/app/components/common/image-gallery/image-gallery.component.html
@@ -15,6 +15,7 @@
         [src]="getCatchImageSource(catch)" 
         [alt]="catch.fishType" 
         class="gallery-img" 
+        [ngClass]="{'harr-img': catch.fishType === 'Harr'}"
         (load)="onImageLoad(catch.catchId)" 
       />
       <!-- Vertikal trepunktsmeny med custom SVG -->
